Commit for path changes

--- a/async_promise.html
+++ b/async_promise.html
@@ -16,13 +16,13 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="../Aug02/index.html">Fetch/Promise</a>
+            <a class="nav-link" href="index.html">Fetch/Promise</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="../Aug02/async_promise.html">Async/Promise</a>
+            <a class="nav-link" href="async_promise.html">Async/Promise</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="../Aug02/aync_imdb.html">Async/IMDB</a>
+              <a class="nav-link" href="aync_imdb.html">Async/IMDB</a>
             </li>
         </ul>
       </div>
